# PhysicsGuard

./: .gitignore  CLAUDE.md  PLAN.md  README.md  ai_interface.py  main.py  monoculture_detector.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  cases.jsonl
core/: conditional_verdict.py  conservation_checker.py  constraint_mapper.py  contrapositive_tester.py  flag_engine.py  premise_parser.py  vectorizer.py
domains/: information.py  organizational.py  thermodynamic_accountability.py
tests/: test_benchmarks.py  test_information.py  test_organizational.py  test_premises.py  test_thermodynamic_accountability.py  test_vectorizer.py
